--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,33 @@ var example3Validator = new Validator({
             <input type="submit" class="form-control" value="Submit"/>
           </form>
         </div>
+        <div class="col-xs-12 col-sm-6">
+          <form id="example4">
+            <h1>Example form 4</h1>
+            <p>Use custom validator function</p>
+            <pre>
+              <code>
+var example4Validator = new Validator({
+  formId: 'example4',
+  validate: {
+    notEmpty: {
+      validator: function(value) {
+        return value ? true : false;
+      },
+      errorMessage: 'Field can not be empty'
+    }
+  }
+});              </code>
+            </pre>
+            <div class="form-group">
+              <label for="exampleInputEmail7">Not empty field</label>
+              <input id="exampleInputEmail7" type="text" name="notEmpty" placeholder="Can not be empty" class="form-control" />
+            </div>
+            <input type="submit" class="form-control" value="Submit"/>
+          </form>
+        </div>
+
+
 
 
 
@@ -197,32 +224,59 @@ var example3Validator = new Validator({
       });
     </script>
     <script type="text/javascript">
-    Validator.existingsValidators.notEmpty = function(value) {
-      return value ? true : false;
-    }
+      Validator.existingsValidators.notEmpty = function(value) {
+        return value ? true : false;
+      }
 
-    var example3Validator = new Validator({
-      formId: 'example3',
-      validate: {
-        notEmpty: {
-          validator: 'notEmpty',
-          errorMessage: 'Field can not be empty'
+      var example3Validator = new Validator({
+        formId: 'example3',
+        validate: {
+          notEmpty: {
+            validator: 'notEmpty',
+            errorMessage: 'Field can not be empty'
+          }
         }
-      }
-    });
+      });
 
-    var example3Form = document.getElementById('example3');
+      var example3Form = document.getElementById('example3');
 
-    example3Form.addEventListener('submit', function(event) {
-      event.preventDefault();
+      example3Form.addEventListener('submit', function(event) {
+        event.preventDefault();
 
-      var isValid = example3Validator.isValid();
+        var isValid = example3Validator.isValid();
 
-      if (isValid) {
-        alert('Form is valid');
-      }
-    });
+        if (isValid) {
+          alert('Form is valid');
+        }
+      });
     </script>
+
+    <script type="text/javascript">
+      var example4Validator = new Validator({
+        formId: 'example4',
+        validate: {
+          notEmpty: {
+            validator: function(value) {
+              return value ? true : false;
+            },
+            errorMessage: 'Field can not be empty'
+          }
+        }
+      });
+
+      var example4Form = document.getElementById('example4');
+
+      example4Form.addEventListener('submit', function(event) {
+        event.preventDefault();
+
+        var isValid = example4Validator.isValid();
+
+        if (isValid) {
+          alert('Form is valid');
+        }
+      });
+    </script>
+
 
 
   </body>
